--- a/app/globals.scss
+++ b/app/globals.scss
@@ -100,6 +100,7 @@ main {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
   @include m.tablet {width: 85vw;}
   @include m.tablet-landscape {width: 70vw;}
   @include m.desktop {width: 55vw;}
